# Exemple-FastApi-Mongo-GHCopilot

./: .env  README.md  alembic.ini  pyproject.toml  realworld.db
docs/: README.md
docs/endpoints/: README.md  profile.md
migrations/: env.py
migrations/versions/: b6c9829b4a3d_initial_migration_with_updated_models.py
scripts/: init_db.py  init_db.sh
src/: __init__.py  api.py  database.py  dependencies.py  init_db.py  settings.py
src/core/: exceptions.py  tag.py  user.py
src/endpoints/: article_sql.py  comment_sql.py  profile.py  profile_sql.py  tag.py  tag_sql.py  user_sql.py
src/models/: __init__.py  article_sql.py  user_sql.py
src/repositories/: __init__.py  article_repository.py  comment_repository.py  user_repository.py
src/schemas/: article.py  base.py  comment.py  date.py  dateparser.py  user.py
src/utils/: date.py  security.py
tests/: test_profile.py
tests/core/: test_article.py
